# Agent-Adversary

./: .gitignore  CONTRIBUTING.md  DEVELOPMENT_PLAN.md  PHASE_10_PLAN.md  PHASE_1_SUMMARY.md  PHASE_3_PLAN.md  PHASE_4_PLAN.md  PHASE_5_PLAN.md  PHASE_6_PLAN.md  PHASE_7_PLAN.md  PHASE_8_PLAN.md  PHASE_9_PLAN.md  README.md  SECURITY.md  SPRINT_LOGS.md  audit_report.html  latest_report.md  metrics.prom  mock_agent.sh  pyproject.toml
agent_adversary/adversary/: adaptive_orchestrator.py  generator.py  logic_traps.py  plugin_manager.py  red_team_agent.py  rl_harness.py  schema.py
agent_adversary/cli/: main.py
agent_adversary/cloud/: uploader.py
agent_adversary/connectors/: base.py  browser.py  vlm.py
agent_adversary/distributed/: analytics.py  worker.py
agent_adversary/evaluator/: advisor.py  judge.py  professional_report.py  profiler.py  report.py
agent_adversary/observability/: exporters.py  graph.py  heatmap.py  monitor.py  telemetry.py
agent_adversary/patching/: hotfix.py
agent_adversary/security/: audit.py  sanitizer.py  (+1 more)
cli/: arena.py
docs/: GALLERY.md  sample_report.md
examples/: test_claude_code.py  test_openclaw_native.py
tests/: test_anthropic_connector.py  test_arena.py  test_battle.py  test_battle_scenarios.py  test_connectors.py  test_consensus.py  test_docker_connector.py  test_engine.py  test_evaluator.py  test_framework_connectors.py  test_generator.py  test_graph.py  test_observability.py  test_professional_report.py  test_referee.py  test_security.py  test_security_utils.py  test_sophisticated_mock.py  test_stepper.py  test_swarm.py
(+22 files in other folders)
